@@ -70,11 +70,18 @@ public final class StatisticsIndexMap implements Serializable {
   private final int m_numberOfDoubleIndicies;
 
   /**
-   * A special slot for the HTTP plugin so it doesn't steal "user"
+   * Special slot for the HTTP plugin so it doesn't steal "user"
    * indicies.
    */
   public static final String HTTP_PLUGIN_RESPONSE_STATUS_KEY =
     "httpplugin.responseStatusKey";
+
+  /**
+   * Special slot for the HTTP plugin so it doesn't steal "user"
+   * indicies.
+   */
+  public static final String HTTP_PLUGIN_RESPONSE_LENGTH_KEY =
+    "httpplugin.responseLengthKey";
 
   /**
    * Singleton accessor.
@@ -99,6 +106,7 @@ public final class StatisticsIndexMap implements Serializable {
     m_map.put("userLong3", new LongIndex(nextLongIndex++));
     m_map.put("userLong4", new LongIndex(nextLongIndex++));
     m_map.put(HTTP_PLUGIN_RESPONSE_STATUS_KEY, new LongIndex(nextLongIndex++));
+    m_map.put(HTTP_PLUGIN_RESPONSE_LENGTH_KEY, new LongIndex(nextLongIndex++));
 
     m_numberOfLongIndicies = nextLongIndex;
 
